tests/compile-fail/cases/tainted_into_remove_file.stderr
error[E0277]: the trait bound `Tainted<Vec<u8>>: AsRef<Path>` is not satisfied
 --> cases/tainted_into_remove_file.rs:6:29
  |
6 |     let _ = fs::remove_file(t);
  |             --------------- ^ the trait `AsRef<Path>` is not implemented for `Tainted<Vec<u8>>`
  |             |
  |             required by a bound introduced by this call
  |
note: required by a bound in `remove_file`
 --> $RUST/std/src/fs.rs
  |
  | pub fn remove_file<P: AsRef<Path>>(path: P) -> io::Result<()> {
  |                       ^^^^^^^^^^^ required by this bound in `remove_file`
